--- a/D1/Day_001_example_of_metrics.ipynb
+++ b/D1/Day_001_example_of_metrics.ipynb
@@ -216,6 +216,187 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HW 1\n",
+    "請上 Kaggle, 在 Competitions 或 Dataset 中找一組競賽或資料並寫下："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HW 1.1 你選的這組資料為何重要\n",
+    "\n",
+    "A: Credit Card Fraud Detection are the most voted data!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "![most_voted](most_voted.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  HW 1.2 資料從何而來 (tips: 譬如提供者是誰、以什麼方式蒐集)\n",
+    "\n",
+    "A: By Machine Learning Group - ULB\n",
+    "\n",
+    "ref: https://www.kaggle.com/mlg-ulb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  HW 1.3 蒐集而來的資料型態為何"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-27T13:56:17.023384Z",
+     "start_time": "2018-12-27T13:56:11.480990Z"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# import packages\n",
+    "import pandas as pd\n",
+    "# read data\n",
+    "kag_cc = pd.read_csv('../data/creditcard.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A: Data basic infomation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-27T14:14:00.051500Z",
+     "start_time": "2018-12-27T14:13:59.864259Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 284807 entries, 0 to 284806\n",
+      "Data columns (total 31 columns):\n",
+      "Time      284807 non-null float64\n",
+      "V1        284807 non-null float64\n",
+      "V2        284807 non-null float64\n",
+      "V3        284807 non-null float64\n",
+      "V4        284807 non-null float64\n",
+      "V5        284807 non-null float64\n",
+      "V6        284807 non-null float64\n",
+      "V7        284807 non-null float64\n",
+      "V8        284807 non-null float64\n",
+      "V9        284807 non-null float64\n",
+      "V10       284807 non-null float64\n",
+      "V11       284807 non-null float64\n",
+      "V12       284807 non-null float64\n",
+      "V13       284807 non-null float64\n",
+      "V14       284807 non-null float64\n",
+      "V15       284807 non-null float64\n",
+      "V16       284807 non-null float64\n",
+      "V17       284807 non-null float64\n",
+      "V18       284807 non-null float64\n",
+      "V19       284807 non-null float64\n",
+      "V20       284807 non-null float64\n",
+      "V21       284807 non-null float64\n",
+      "V22       284807 non-null float64\n",
+      "V23       284807 non-null float64\n",
+      "V24       284807 non-null float64\n",
+      "V25       284807 non-null float64\n",
+      "V26       284807 non-null float64\n",
+      "V27       284807 non-null float64\n",
+      "V28       284807 non-null float64\n",
+      "Amount    284807 non-null float64\n",
+      "Class     284807 non-null int64\n",
+      "dtypes: float64(30), int64(1)\n",
+      "memory usage: 67.4 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "kag_cc.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  HW 1.4 這組資料想解決的問題如何評估\n",
+    "A: solve Credit Card Fraud Detection problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HW 2\n",
+    "想像你經營一個自由載客車隊，你希望能透過數據分析以提升業績，請你思考並描述你如何規劃整體的分析/解決方案："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HW 2.1 核心問題為何 (tips：如何定義 「提升業績 & 你的假設」) \n",
+    "\n",
+    "A: SWOT 分析/提升業績兩種方向:a.弱點改善/b.強項增強\n",
+    "\n",
+    "a.弱點改善\n",
+    "\n",
+    "    低收入時段/地段，減少車次\n",
+    "    找到該時段地段之高點\n",
+    "    \n",
+    "b.強項增強\n",
+    "\n",
+    "    高收入時段/地段，增加車次\n",
+    "    找到該時段地段之高點"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HW 2.2 資料從何而來 (tips：哪些資料可能會對你想問的問題產生影響 & 資料如何蒐集)\n",
+    "\n",
+    "A: 車機GPS\n",
+    "    \n",
+    "    ID/上車時間/行經路段(透過GPS 經緯度去mapping)/下車時間/車資"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HW2.4 你要回答的問題，其如何評估 (tips：你的假設如何驗證)\n",
+    "\n",
+    "A: 用word2vec 的方式將路段變成向量去預測可能的金額"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
